--- a/themes/assets/css/carousel.css
+++ b/themes/assets/css/carousel.css
@@ -279,7 +279,7 @@ footer{padding:18px 0; background:#111; color:#fff;}
 .img-responsive img{
 
 
-  width: 120%;
+  width: 70%;
   max-width: 100%;
 
 }
@@ -305,7 +305,7 @@ footer{padding:18px 0; background:#111; color:#fff;}
 @import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css";
 @import "http://fonts.googleapis.com/css?family=Roboto:400,500";
 
-.box > .icon { text-align: center; position: relative; }
+.box > .icon { margin-top:80px; text-align: center; position: relative; }
 .box > .icon > .image { position: relative; z-index: 2; margin: auto; width: 88px; height: 88px; border: 8px solid white; line-height: 88px; border-radius: 50%; background: #63B76C; vertical-align: middle; }
 .box > .icon:hover > .image { background: #333; }
 .box > .icon > .image > i { font-size: 36px !important; color: #fff !important; }
@@ -318,3 +318,11 @@ footer{padding:18px 0; background:#111; color:#fff;}
 .box > .icon > .info > .more a { font-family: "Roboto",sans-serif !important; font-size: 12px; color: #222; line-height: 12px; text-transform: uppercase; text-decoration: none; }
 .box > .icon:hover > .info > .more > a { color: #fff; padding: 6px 8px; background-color: #63B76C; }
 .box .space { height: 30px; }
+
+
+
+.daze{
+
+  width: 70px;
+
+}
